objects/PathSetting__mdt.object
<CustomObject>
    <fields>
        <fullName>Recordtype_Visible__c</fullName>
        <label>Recordtype Visible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visible_To__c</fullName>
        <label>Visible To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>canNavigateTo__c</fullName>
        <label>canNavigateTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive_For__c</fullName>
        <label>isActive For</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FSL_PathSetting</label>
    <listViews>
        <fullName>All_Recs</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>canNavigateTo__c</columns>
        <columns>isActive_For__c</columns>
        <columns>Visible_To__c</columns>
        <columns>Recordtype_Visible__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Recs</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>PathSettings</pluralLabel>
</CustomObject>